samples/_failures_safe/1761224091_072e2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6e3e5a5.c: In function ‘main’:
./samples/SAFE/__tmp_d6e3e5a5.c:161:17: error: expected declaration or statement at end of input
  161 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_d6e3e5a5.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d6e3e5a5.c:161:17: error: expected declaration or statement at end of input
